--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "CJS and ESM hooks for orchestrion",
   "license": "Apache-2.0",
   "type": "commonjs",
-    "repository": {
+  "repository": {
     "type": "git",
-    "url": "https://github.com/apm-js-collab/tracing-hooks.git"
+    "url": "git+https://github.com/apm-js-collab/tracing-hooks.git"
+  },
+  "engines": {
+    "node": ">=20"
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "c8 borp 'test/**/*.test.{js,mjs}'"
   },
   "files": [
     "index.js",
@@ -21,5 +24,10 @@
     "@apm-js-collab/code-transformer": "^0.6.0",
     "debug": "^4.4.1",
     "module-details-from-path": "^1.0.4"
+  },
+  "devDependencies": {
+    "@matteo.collina/snap": "^0.3.0",
+    "borp": "^0.20.1",
+    "c8": "^10.1.3"
   }
 }
